# seal-ql

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTORS.md  DEPLOYMENT.md  Makefile  README.md  RELEASING.md  SETUP.md  docker-compose.yml  pyproject.toml
.claude/skills/local-dev-workflow/: SKILL.md
.claude/skills/modify-sql-validation/: SKILL.md
.cursor/rules/: python-rules.mdc  typescript-rules.mdc
.cursor/skills/react-vercel/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/api/: Dockerfile  openapi.json  openapi.yaml  pyproject.toml
apps/api/app/: __init__.py  database_routing.py  dependencies.py  errors.py  llm_errors.py  main.py  openapi_responses.py  schemas.py  security.py  session_http.py
apps/api/app/routes/: catalog.py  chat.py  databases.py  health.py  query.py  schema.py  sessions.py  vector.py  workspace.py
apps/api/tests/: catalog_fixtures.py  conftest.py  e2e_llm_helpers.py  factory.py  live_http_fixtures.py  mocks.py  shared.py  test_api.py  test_auth.py  test_catalog_routes.py  test_catalog_workspace_integration.py  test_chat.py  test_chat_execution_metadata.py  test_chat_refusal_metadata.py  test_chat_stream.py  test_chat_stream_refusal_metadata.py  test_database_routing.py  test_e2e.py  test_e2e_llm_helpers.py  test_e2e_reasoning.py  test_guardrails_api.py  test_llm_errors.py  test_public_docs.py  test_query_strict_metadata.py  test_session_routes.py  test_workspace.py
apps/docs/: .prettierignore  DEPLOYMENT.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/docs/public/: openapi.json
apps/docs/public/compose/: docker-compose.example.yml
apps/docs/scripts/: verify-doc-snippets.ts
apps/docs/src/app/: globals.css  page.tsx
apps/docs/src/app/demo/: page.tsx
apps/docs/src/app/docs/: layout.tsx  page.tsx
apps/docs/src/components/: code-block.tsx  footer.tsx  navbar.tsx  page-header.tsx
apps/docs/src/components/demo/: chart-panel.tsx  chat-demo-panel.tsx  chat-stream-demo-panel.tsx  chat-stream-error-callout.tsx  metadata-json-preview.tsx  metadata-panel.tsx  query-console.tsx  results-panel.tsx  sdk-panel.tsx  trust-panel.tsx
apps/docs/src/components/docs/: callout.tsx  config-reference.tsx  doc-link.tsx  docs-prose.tsx  docs-sidebar.tsx  endpoint-block.tsx  llm-config.tsx  metadata-field-list.tsx  metadata-json-block.tsx  ports-table.tsx  registry-nav-item.tsx  setup-checklist.tsx
apps/docs/src/data/: configuration-reference.ts  demo-fixtures.json  openapi.json
apps/docs/src/lib/: api-error.ts  chat-api.ts  compose-example.ts  constants.ts  demo-chat-fixtures.ts  demo-trust.ts  doc-snippets.ts  execution-metadata.ts  openapi.ts  site-display.ts
apps/web/: DEPLOYMENT.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/public/compose/: docker-compose.example.yml
apps/web/public/config/: catalog.example.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/catalog/: page.tsx
apps/web/src/app/chat/: layout.tsx  page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/docs/: layout.tsx  page.tsx
apps/web/src/components/: code-block.tsx  footer.tsx  navbar.tsx  page-header.tsx  seal-logo.tsx  theme-toggle.tsx
apps/web/src/contexts/: chat-session-context.tsx  connection-context.tsx
apps/web/src/data/: demo-fixtures.json  openapi.json
apps/web/src/hooks/: use-connection.ts
apps/web/src/lib/: api-error.ts  catalog-descriptions.ts  chart-export.ts  chat-api.ts  connection.ts  constants.ts  demo-fixtures.ts  doc-snippets.ts  docs-url.ts  execution-metadata.ts  format-relative-time.ts  metadata-from-stream.ts  openapi.ts  seal-api.ts  session-api.ts  sse-parse.ts  stream-meta-validation.ts  toast.ts
config/: catalog.yaml  databases.example.yaml  dependency-catalog.yaml  seal-tools.openai.json  stream_meta_metadata_keys.json
docs/: README.md  catalog-curation.md  chat-enhancement.md  chat-metadata.md  embedding.md  guardrails.md  how-seal-works.md  local-evals.md  multi-database.md  reasoning-layers.md  workspace-api.md  zero-trust-sql.md
docs/integrations/: README.md  agent-frameworks.md  custom-enhancers.md  vector-stores.md
evals/: pyproject.toml
evals/data/: eval_set.jsonl
evals/intelligence_evals/: __init__.py  runner.py
evals/seal_evals/: __init__.py  runner.py
evals/tests/: test_runner.py
scripts/: ci-prepare-env.sh  ci-wait-for-ollama.sh  generate_openapi.py  generate_web_demo_fixtures.py  healthcheck.py  migrate_app.sql  migrate_chat_sessions.sql  rate-limit-python-sdk.mjs  refresh_continuous_aggregates.sql  response_validation.py  seed.sql  smoke_api.sh  sync-sdk-meta-vendor.mjs  sync_catalog.py  truncate_demo_data.sql  validate_query_response.py  verify_chat_flatten_contract.ts  verify_dependency_catalog.py  verify_rate_limit_sync.py  verify_stream_meta_validation_parity.ts
sdks/python/: README.md  pyproject.toml
sdks/python/intelligence_connector/: __init__.py  client.py  exceptions.py  models.py
sdks/python/seal/: __init__.py  _http_errors.py  _sse.py  client.py  exceptions.py  models.py  rate_limit.py  rate_limit_markers.json
sdks/python/tests/: test_chat_client.py  test_client.py  test_http_errors.py  test_sdk_e2e.py
sdks/typescript/: .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
sdks/typescript/src/: client.ts  constants.ts  errors.ts  http-errors.ts  index.ts  react.tsx  sse.ts  types.ts
sdks/typescript/tests/: api-error.test.ts  chart-csv.test.ts  chart-spec.test.ts  client-stream.test.ts  client.test.ts  e2e-llm.ts  e2e.test.ts  http-errors.test.ts  react.test.tsx  sse.test.ts
shared/: README.md  api-error.ts  chart-csv.ts  chart-spec.ts  chat-sse-events.ts  conversation.ts  metadata-contract.ts  metadata-summary.ts  stream-meta.ts  trust-explainability.ts
tests/: test_response_validation.py  test_seal_tools_manifest.py
tests/fixtures/: chat_flatten_golden.json  stream_meta_validation_matrix.json
(+74 files in other folders)
