[project]
name = "intelligence-connector"
version = "0.1.0"
description = "AI-powered SQL query generation, validation, and visualization SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
[tool.uv.workspace]
members = [
    "apps/api",
    "packages/core",
    "packages/sql",
    "packages/charts",
    "packages/semantic",
    "sdks/python",
    "evals",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[tool.pytest.ini_options]
testpaths = [
    "packages/core/tests",
    "packages/sql/tests",
    "packages/charts/tests",
    "packages/semantic/tests",
    "apps/api/tests",
    "sdks/python/tests",
    "evals",
]
pythonpath = [
    "packages/core",
    "packages/sql",
    "packages/charts",
    "packages/semantic",
    "apps/api",
    "sdks/python",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
