[project]
name = "seal-workspace"
version = "0.1.0"
description = "Seal — AI-powered SQL query generation, validation, and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
[tool.uv.workspace]
members = [
    "apps/api",
    "packages/core",
    "packages/sql",
    "packages/charts",
    "packages/semantic",
    "sdks/python",
    "evals",
]

[tool.uv]
# Sync with config/dependency-catalog.yaml → python.constraints
constraint-dependencies = [
    "litellm>=1.83.7,<2",
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[tool.pytest.ini_options]
testpaths = [
    "packages/core/tests",
    "packages/sql/tests",
    "packages/charts/tests",
    "packages/semantic/tests",
    "apps/api/tests",
    "sdks/python/tests",
    "tests",
    "evals",
]
pythonpath = [
    "packages/core",
    "packages/sql",
    "packages/charts",
    "packages/semantic",
    "apps/api",
    "sdks/python",
    "evals",
    "scripts",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures need these imports at runtime (not type-checking only). Ruff 0.15+ uses TC00x codes.
"**/tests/**" = ["TC002", "TC003"]
