[project]
name = "seal-evals"
version = "0.1.0"
description = "Evaluation harness for Seal"
requires-python = ">=3.11"
dependencies = [
    "seal-core",
    "seal-sql",
    "seal-charts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
seal-core = { workspace = true }
seal-sql = { workspace = true }
seal-charts = { workspace = true }
