[project]
name = "seal-api"
version = "0.1.0"
description = "FastAPI application for the Seal SDK"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "seal-core",
    "seal-sql",
    "seal-charts",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
seal-core = { workspace = true }
seal-sql = { workspace = true }
seal-charts = { workspace = true }
seal-semantic = { workspace = true }
